[package]
name = "validation-state-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
